--- a/ticket-app/src/index.css
+++ b/ticket-app/src/index.css
@@ -24,10 +24,9 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #070b18;
 }
 
 h1 {
